--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
         {
             "label": "Build py",
             "type": "shell",
-            "command": "Write-host Building py... ; rm ./bin/*.py; cp ./src/py/* ./bin",
+            "command": "Write-host Building py... ; rm -ErrorAction Ignore ./bin/*.py; cp ./src/py/* ./bin",
             "options": {
                 "cwd": "${workspaceFolder}"
             },
@@ -36,7 +36,7 @@
        {
             "label": "Build update",
             "type": "shell",
-            "command": "Write-host Building update... ; rm -r -force -erroraction ignore ./dist/*; cp -r -exclude meta.json ./bin, ./README.md, ./LICENSE, ./update ./dist/tmp; ls -r ./dist/tmp/__pycache__, ./dist/tmp/user_files -exclude hello_world.py | rm -r -force; ls ./dist/tmp | Compress-Archive -Force -DestinationPath ./dist/update.zip; pandoc -t ${env:CODEPATH}/pandoc/anki-addon.lua --abbreviations=${env:CODEPATH}/pandoc/empty -f markdown+link_attributes ./README.md -o ./dist/update.txt | Out-Null;",
+            "command": "Write-host Building update... ; rm -ErrorAction Ignore -r -force ./dist/*; cp -r -exclude meta.json ./bin, ./README.md, ./LICENSE, ./update ./dist/tmp; ls -r ./dist/tmp/__pycache__, ./dist/tmp/user_files -exclude hello_world.py | rm -ErrorAction Ignore -r -force; ls ./dist/tmp | Compress-Archive -Force -DestinationPath ./dist/update.zip; pandoc -t ${env:CODEPATH}/pandoc/anki-addon.lua --abbreviations=${env:CODEPATH}/pandoc/empty -f markdown+link_attributes ./README.md -o ./dist/update.txt | Out-Null;",
             "options": {
                 "cwd": "${workspaceFolder}"
             },
